NINE-567 fixed bugs

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -176,7 +176,7 @@
     "hours": "Hodiny",
     "minutes": "Minut",
     "seconds": "Sekundy",
-    "week": "Semaine",
+    "week": "Týden",
     "name": "Název",
     "points":  "Směřovat",
     "prize": "cena",
