--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -307,7 +307,8 @@
       "generalInfo": "Infos générales",
       "subscriptions": "Souscriptions",
       "sms": "Envoyez des promotions par e-mail",
-      "email": "Envoyer des promos par sms",
+      "email": "Je ne veux pas recevoir de bonus",
+      "denyBonuses": "Ich möchte keine Boni erhalten",
       "passwordChange": "Changement de mot de passe",
       "oldPassword": "Vieux mot de passe",
       "newPassword": "Nouveau mot de passe",
