--- a/locales/cs.json
+++ b/locales/cs.json
@@ -155,7 +155,11 @@
   },
   "search" : {
     "findGame" : "Najdi hru",
-    "notFound" : "Nic nebylo nalezeno"
+    "notFound" : "Nic nebylo nalezeno",
+    "search": "Hledat",
+    "searchResults": "Výsledky hledání",
+    "nothingFound": "Bohužel, nic nenalezeno",
+    "try": "Zkuste hledat něco jiného"
   },
   "common" : {
     "date" : "Datum",
