NINE-575 corrected translations

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -442,7 +442,7 @@
     },
     "scubaCash": {
       "title": "SCUBA CASH <br/>OD BOOONGO",
-      "name": "SCUBA CASH <br/>OD BOOONGO",
+      "name": "SCUBA CASH OD BOOONGO",
       "text": "Připravte si skafandr a vstupte do turnaje Scuba Cash od Booongo! Epická akce s prize poolem rozpínajícím se přes sedm moří! Kampaň Scuba Cash zahrnuje řadu pravidelných turnajů a extra výsledkovou tabulku. Zhluboka se nadechněte a ponořte se k podvodním bitvám. Vytáhněte velké výhry z hlubin oceánu a připravte se na to, že Krakeni, žraloci a další plavci se s vámi budou přetahovat o nejvyšší cenu!"
     }
   },
