--- a/locales/de.json
+++ b/locales/de.json
@@ -448,7 +448,7 @@
     },
     "scubaCash": {
       "title": "SCUBA CASH <br/>BY VON BOOONGO",
-      "name": "SCUBA CASH <br/>VON BOOONGO",
+      "name": "SCUBA CASH VON BOOONGO",
       "text": "Schlüpfe in deinen Tauchanzug und willkommen zum Scuba-Cash-Turnier von Booongo! Epische Action mit einem Preispool, der so groß ist wie die Sieben Weltmeere! Die Scuba-Cash-Aktion umfasst eine Reihe von regulären Turnieren und eine Sonderrangliste. Hol tief Luft und tauche ein in Unterwasserschlachten. Ziehe große Gewinne aus den Tiefen des Ozeans und mach dich auf Kraken, Haie und andere Wasserbewohner gefasst, um einen Hauptgewinn zu ergattern!"
     }
   },
