--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -447,7 +447,7 @@
     },
     "scubaCash": {
       "title": "SCUBA CASH <br/>DE BOOONGO",
-      "name": "SCUBA CASH <br/>DE BOOONGO",
+      "name": "SCUBA CASH DE BOOONGO",
       "text": "Préparez vos combinaisons de plongée et bienvenue au Tournoi Scuba Cash de Booongo! De l’action épique avec une cagnotte qui s’étend sur les sept mers! La campagne Scuba Cash prévoit une série de tournois réguliers et un classement supplémentaire. Prenez une grande respiration et plongez dans des batailles sous-marines. Tirez de gros gains des profondeurs de l’océan et préparez-vous à ce que les monstres marins, les requins et autres nageurs s’emparent d’un grand prix!"
     }
   },
