--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -449,7 +449,7 @@
     },
     "scubaCash": {
       "title": "SCUBA CASH <br/>BY BOOONGO",
-      "name": "SCUBA CASH <br/>BY BOOONGO",
+      "name": "SCUBA CASH BY BOOONGO",
       "text": "Get your diving suits ready and welcome to the Scuba Cash Tournament by Booongo! Epic action with a prize pool spanning the seven seas! The Scuba Cash campaign includes a series of regular tournaments and an extra leaderboard. Take a deep breath and dive into underwater battles. Drag big wins from the depths of the ocean and prepare for Krakens, Sharks, and other swimmers to grab a grand prize!"
     }
   },
