NINE-575 corrected cs columns

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -1333,7 +1333,7 @@
     "terms": [
       {
         "title": "Doba kampaně:<br/><br/>",
-        "text": "od 15 července 2021 do 24 července 2021<br/><br/>"
+        "text": "od 15 července 2021 do 24 července 2021<br/><br/><br/>"
       },
       {
         "title": " Struktura cen:<br/><br/>",
@@ -1341,7 +1341,7 @@
       },
       {
         "title": "Minimální sázka:<br/><br/>",
-        "text": "0,50€<br/><br/>"
+        "text": "0,50€<br/><br/><br/>"
       },
       {
         "title": "Podmínky turnaje:",
