--- a/locales/en_ca.json
+++ b/locales/en_ca.json
@@ -147,7 +147,7 @@
     "roulette": "Roulette",
     "table": "Table Games",
     "card": "Card games",
-    "recent": "Recent games",
+    "recent": "Last games",
     "new": "New games"
   },
   "footer": {
