NINE-585 corrected german text

--- a/locales/de.json
+++ b/locales/de.json
@@ -129,7 +129,7 @@
     "aboutUs": "Über uns",
     "faq": "Häufig Gestellte Fragen (FAQ)",
     "btc": "Über BTC",
-    "aml": "Anti-geldwähler-Politik",
+    "aml": "Anti-Geldwäsche-Policy",
     "terms": "Geschäftsbedingungen",
     "bonusPolicy": "Bonusbedingungen",
     "privacyPolicy": "Datenschutz-Bestimmungen",
