NINE-588 corrected promotions and cashback

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -392,9 +392,9 @@
     "text" : "Zrušení limitu bude uplatněno do 24 hodin po žádosti hráče.",
     "deposit1" : {
       "title" : "100% <br/> z vkladu <br/> částk",
-      "upTo" : "až KČ 3330  + 150 SPINŮ ZDARMA",
+      "upTo" : "až KČ 3330  + 250 SPINŮ ZDARMA",
       "name" : "Bonus ke prvnímu vkladu",
-      "text" : "Proveďte první vklad na Ninecasino a získejte až Kč 3330  + 150 spinů zdarma. Abyste aktivovali bonus – jednoduše vložte € 20 nebo více. Bonus se vám přičte automaticky."
+      "text" : "Proveďte první vklad na Ninecasino a získejte až Kč 3330 + 250 spinů zdarma. Po prvním vkladu získáte 50 spinů zdarma každý z následujících 5 dnů.. Abyste aktivovali bonus – jednoduše vložte € 20 nebo více. Bonus se vám přičte automaticky."
     },
     "deposit2" : {
       "title" : "55% <br/> z vkladu <br/> částky",
