--- a/locales/fr_ca.json
+++ b/locales/fr_ca.json
@@ -397,9 +397,9 @@
     "text": "Ninecasino cherche constamment à offrir les meilleures promotions. Nous utilisons les dernières technologies et les commentaires de nos joueurs pour repenser nos promotions. Profitez-en!",
     "deposit1": {
       "title": "100%<br/> du montant du<br/> dépôt",
-      "upTo": "jusqu’à  $225 + 150 tours gratuit",
+      "upTo": "jusqu’à  $225 + 250 tours gratuit",
       "name": "Bonus de premier dépôt",
-      "text": "Effectuez votre premier dépôt sur Ninecasino et recevez jusqu’à $225 + 150 tours gratuit.<br/><br/>Pour activer le bonus, il suffit d’effectuer un premier dépôt de $30 ou plus. Le bonus sera versé automatiquement. "
+      "text": "Effectuez votre premier dépôt sur Ninecasino et recevez jusqu’à $225 + 250 tours gratuit. Après votre premier dépôt, vous recevrez 50 tours gratuits chaque jour au cours des 5 jours suivants.<br/><br/>Pour activer le bonus, il suffit d’effectuer un premier dépôt de $30 ou plus. Le bonus sera versé automatiquement. "
     },
     "deposit2": {
       "title": "55%<br/> du montant du<br/> dépôt",
